--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="six columns">
                     <h2>Mis Tweets</h2>
-                    <div id="lista-tweets"></div>
+                    <div id="lisa-tweets"></div>
                 </div>
             </div>
 
